--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Signing
+*.jks
+keystore.properties
+
 # Gradle
 .gradle/
 build/
@@ -24,3 +28,10 @@ Thumbs.db
 
 # Temporary folders
 undefined/
+
+# Release Artifacts
+app/release/
+
+# Firebase Configuration
+google-services.json
+app/google-services.json
